--- a/styles/home.css
+++ b/styles/home.css
@@ -103,8 +103,17 @@ img {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: #f1f4eec6;
+  background-color: rgba(231, 231, 231, 0.913);
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .modal-container {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.828);  
+  }
 }
 
 .inner-modal {
