--- a/styles/home.css
+++ b/styles/home.css
@@ -24,6 +24,10 @@ body {
   padding-top: 10px;
 }
 
+.home-captions {
+  text-align: center;
+}
+
 .intro-feed {
   display: flex;
   justify-content: space-around;
@@ -185,6 +189,18 @@ img {
 .no-content {
   padding-top: 150px;
 }
+
+@media screen 
+  and (min-width: 500px)
+  and (max-width: 900px)
+  and (min-height: 350px)
+  and (orientation: landscape) {
+    .name {
+      padding: 0;
+      top: 0;
+      max-height: 40px;
+    }
+  }
 
 @media screen and (max-width: 950px) and (max-height: 400px){
   .home-container {
