--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,600;1,400;1,600&family=Ubuntu:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+
 @font-face {
   font-family: 'RobotoMono';
   src: url('../public/RobotoMono.ttf') format('truetype');
@@ -9,7 +10,7 @@
 html.has-scroll-smooth {
   overflow: hidden;
 }
-
+  
 html.has-scroll-dragging {
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -525,7 +526,8 @@ details summary::marker {
   padding: 160px 40px 80px;
 }
 
-@media (max-width: 420px) {
+@media only screen 
+and (max-width: 420px) {
   .master-container {
     padding: 55px 5px;
   }
@@ -534,7 +536,7 @@ details summary::marker {
 @media screen 
   and (min-width: 500px)
   and (max-width: 900px)
-  and (min-height: 350px)
+  and (max-height: 370px)
   and (orientation: landscape) {
     .master-container {
       padding: 20px 40px 80px;
