--- a/styles/home.css
+++ b/styles/home.css
@@ -97,7 +97,6 @@ img {
 
 .modal-container {
   display: flex;
-  z-index: 999;
   position: fixed;
   justify-content: center;
   align-items: center;
@@ -107,16 +106,19 @@ img {
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(231, 231, 231, 0.422);
+  background-color: rgba(231, 231, 231, 0.85);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  mix-blend-mode: normal;
+  z-index: 1;
 }
 
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
   .modal-container {
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.422);  
+    background-color: rgba(255, 255, 255, 0.85);  
+    mix-blend-mode: normal;
   }
 }
 
@@ -164,7 +166,6 @@ img {
   position: fixed;
   bottom: 50%;
   right: 20px;
-  z-index: 2;
   font-size: 26px;
   cursor: pointer;
 }
@@ -174,7 +175,6 @@ img {
   position: fixed;
   bottom: 50%;
   left: 20px;
-  z-index: 2;
   font-size: 26px;
   cursor: pointer;
 }
@@ -193,7 +193,7 @@ img {
 @media screen 
   and (min-width: 500px)
   and (max-width: 900px)
-  and (max-height: 370px)
+  and (max-height: 390px)
   and (orientation: landscape) {
     .name {
       padding: 0;
@@ -266,7 +266,7 @@ img {
 }
 @media screen and (max-width: 630px){
   .home-container {
-    padding: 50px 10px 50px;
+    padding: 100px 10px 50px;
   }
 }
 @media only screen 
