--- a/styles/home.css
+++ b/styles/home.css
@@ -168,6 +168,7 @@ img {
   right: 20px;
   font-size: 26px;
   cursor: pointer;
+  z-index: 999;
 }
 .prev-slide {
   display: block;
@@ -177,6 +178,7 @@ img {
   left: 20px;
   font-size: 26px;
   cursor: pointer;
+  z-index: 999;
 }
 
 .loader {
@@ -270,6 +272,18 @@ img {
   }
 }
 @media only screen 
+and (max-width: 1000px) {
+  .next-slide {
+    bottom: 5%;
+  }
+  .prev-slide {
+    bottom: 5%;
+  }
+  .img-modal-container {
+    max-height: 650px;
+  }
+}
+@media only screen 
 and (max-width: 420px) {
   .banner-not-found h1{
     font-size: 150px;
@@ -311,13 +325,6 @@ and (max-width: 420px) {
 
   .hide-back-to-top {
     z-index: -1;
-  }
-
-  .next-slide {
-    bottom: 5%;
-  }
-  .prev-slide {
-    bottom: 5%;
   }
 }
 
