--- a/styles/navmenu.css
+++ b/styles/navmenu.css
@@ -77,6 +77,7 @@
   background-position: -100%;
   padding: 10px 0px;
   position: relative;
+  -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   transition: all 0.3s ease-in-out;
 }
